--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -29,7 +29,7 @@
 {% block content %}
     <section class="main-content">
         <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="widget white-bg">
                     <div class="padding-20 text-center">
                         <p class="lead font-500 margin-b-0">
@@ -180,13 +180,14 @@
                         </form>
                     </div>
                 </div>
-
+            </div>
+            <div class="col-lg-8" >
 
                 <div class='widget white-bg friends-group clearfix' id="user_info" style="display:block;">
                     <div class="widget-title"><p>My Ordered Services</p></div>
                     <div class="widget-content">
 
-                    <table class="table">
+                        <table class="table">
                             <thead class="thead-light">
                             <tr>
                                 <th>Name</th>
@@ -202,13 +203,9 @@
                                 </tr>
                             {% endfor %}
                         </table>
-
-
                     </div>
                 </div>
 
-            </div>
-            <div class="col-md-8 col-xs-12">
                 <div class="card">
                     <div class="card-header card-default">
                         Your Portal Information
