--- a/business/templates/businessCreditBuilding/domain.html
+++ b/business/templates/businessCreditBuilding/domain.html
@@ -24,34 +24,70 @@
         </div>
     </div>
     <section class="main-content">
-        <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/mmOpMZwKcuA" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+        {% if services %}
+            <div class="row">
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/mmOpMZwKcuA" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
 
-        <div class="row">
-            <div class="col-md-5">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="https://images.pexels.com/photos/1029757/pexels-photo-1029757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                             height="200px" width="100%" alt="">
-                        <br><br>
-                        <h5 class="card-title">Do You Have A Domain Name For Your Website?</h5>
-                        <h5 class="card-title">Your Business Needs To Have A Domain Name In Order For You To Get A
-                            Website & Professional Email Address. These Are Required In Order For You To Look Credible &
-                            Start Being Able To Get Business Credit Without Leveraging Your Personal Credit. </h5>
-                        <div class="btn-group">
-                            <a target="_blank" class="btn btn-primary"
+                    <br><br>
+                    <table class="table">
+                        <thead class="thead-light">
+                        <tr>
+                            <th>Name</th>
+                            <th>Status</th>
+                            <th>Link</th>
+                        </tr>
+                        </thead>
+                        {% for service in services %}
+                            <tr class="bg-white">
+                                <td>{{ service.name }}</td>
+                                <td>{{ service.status }}</td>
+                                <td>{% if service.product != '' %} <a href="{{ service.product }}" class="btn btn-primary">Link</a> {% else %} - {% endif %}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    </a>
+                </div>
+            </div>
+        {% else %}
+
+            <div class="row">
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/mmOpMZwKcuA" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-md-5">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="https://images.pexels.com/photos/1029757/pexels-photo-1029757.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                 height="200px" width="100%" alt="">
+                            <br><br>
+                            <h5 class="card-title">Do You Have A Domain Name For Your Website?</h5>
+                            <h5 class="card-body">Your Business Needs To Have A Domain Name In Order For You To Get A
+                                Website & Professional Email Address. These Are Required In Order For You To Look
+                                Credible &
+                                Start Being Able To Get Business Credit Without Leveraging Your Personal Credit. </h5>
+
+                            <a target="_blank" class="btn btn-primary btn-block"
                                href="https://www.millennialbusinessbuildersllc.com/products/domain-registration">Click
                                 Here To Get Your <br>Domain Name</a>
+
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </section>
 
 
