--- a/business/templates/businessCreditBuilding/professionalEmailAddress.html
+++ b/business/templates/businessCreditBuilding/professionalEmailAddress.html
@@ -27,34 +27,70 @@
         </div>
     </div>
     <section class="main-content">
-        <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/y_3dIMH_z3I" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+        {% if services %}
+            <div class="row">
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/y_3dIMH_z3I" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
 
-        <div class="row">
-            <div class="col-md-5">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="https://images.pexels.com/photos/193003/pexels-photo-193003.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                             height="200px" width="100%" alt="">
-                        <br><br>
-                        <h5 class="card-title">Do You Have A Professional Email Address?</h5>
-                        <h5 class="card-title">Your Business Needs To Have A Professional Email Address In Order For You
-                            To Look Credible & Start Being Able To Get Business Credit Without Leveraging Your Personal
-                            Credit. </h5>
-                        <div class="btn-group">
-                            <a target="_blank" class="btn btn-primary"
-                               href="https://www.millennialbusinessbuildersllc.com/products/email">Click Here To Get
-                                Your <br>Professional Email Address</a>
+                    <br><br>
+                    <table class="table">
+                        <thead class="thead-light">
+                        <tr>
+                            <th>Name</th>
+                            <th>Status</th>
+                            <th>Email</th>
+                        </tr>
+                        </thead>
+                        {% for service in services %}
+                            <tr class="bg-white">
+                                <td>{{ service.name }}</td>
+                                <td>{{ service.status }}</td>
+                                <td>{{ service.product }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    </a>
+                </div>
+            </div>
+        {% else %}
+            <div class="row">
+                <div class="col-md-12">
+                    <iframe width="100%" height="515" src="https://www.youtube.com/embed/y_3dIMH_z3I" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="https://images.pexels.com/photos/193003/pexels-photo-193003.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                 height="200px" width="100%" alt="">
+                            <br><br>
+                            <h5 class="card-title">Do You Have A Professional Email Address?</h5>
+                            <h5 class="card-title">Your Business Needs To Have A Professional Email Address In Order For
+                                You
+                                To Look Credible & Start Being Able To Get Business Credit Without Leveraging Your
+                                Personal
+                                Credit. </h5>
+                            <div class="btn-group">
+                                <a target="_blank" class="btn btn-primary"
+                                   href="https://www.millennialbusinessbuildersllc.com/products/email">Click Here To Get
+                                    Your <br>Professional Email Address</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </section>
 
     <style>
