--- a/business/templates/professionalEmailAddress.html
+++ b/business/templates/professionalEmailAddress.html
@@ -27,6 +27,7 @@
         </div>
     </div>
     <section class="main-content">
+
         <div class="row">
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/y_3dIMH_z3I" frameborder="0"
@@ -34,17 +35,11 @@
                         allowfullscreen></iframe>
             </div>
         </div>
-        <!--   <div class="row">
-             <div class="col-md-12">
-               <h2 style="text-align:center;">Login With The Email You Have Associated With This Account & The Password Northface14. If You Do Not Remember Go To My Progress In The Top Right Corner To View Your Login Credentials.</h2>
-               <br><br>
-               <iframe src="https://www.websitebuilder.ai/" width="90%" height="750px"></iframe>
-             </div>
-           </div> -->
         <div class="row">
             <div class="col-md-12">
                 <br>
-                <h2 style="text-align:center;">Click The Image Below To Choose The Best Professional Email Address For
+                <h2 style="text-align:center;">Click The Image Below To Choose The Best Professional Email Address
+                    For
                     You</h2>
                 <br><br>
                 <a href="https://www.secureserver.net/products/email?plid=553543" target="_blank">
