--- a/business/templates/businessCreditBuilding/websiteCreationPaid.html
+++ b/business/templates/businessCreditBuilding/websiteCreationPaid.html
@@ -44,7 +44,7 @@
                         <tr>
                             <th>Name</th>
                             <th>Status</th>
-                            <th>Link</th>
+                            <th>URL</th>
                             <th>Go To Dashboard</th>
                         </tr>
                         </thead>
