--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -195,7 +195,7 @@
                     <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money Referring Friends! </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
+                    <a href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
