--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -262,7 +262,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Affiliate Agent Portal</p>
-                            <a class="btn btn-primary" href="https://getdinerotoday.tapfiliate.com/" target="_blank">
+                            <a class="btn btn-primary" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">
                                 Click Here To Go To The <br> Affiliate Agent Portal
                             </a>
                         </div>
