--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -54,7 +54,7 @@
                         <p class="card-text">Click The Button Below To Enter The Affiliate Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter Affiliate
+                                <a href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter Affiliate
                                     Portal</a>
                             </div>
                         </div>
