--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -209,7 +209,9 @@
                 <li class="nav-item">
                     <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome Extension Portal </a>
                 </li>
-
+                <li class="nav-item">
+                    <a href="https://apps.apple.com/us/app/get-dinero-today/id1520722061" target="_blank" class="nav-link"> Download Our IOS App </a>
+                </li>
                 <li class="nav-item">
                     <a href="https://play.google.com/store/apps/details?id=com.millennialbusinessbuilders.getdianotoday" target="_blank" class="nav-link"> Download Our Android App </a>
                 </li>
