--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -38,7 +38,7 @@
                         with No Money Down</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://www.youtube.com/watch?v=tD1H2-1xihA" target="_blank"
+                    <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
                        class="nav-link"> Watch Webinar On Building Business Credit </a>
                 </li>
                 <li class="nav-item">
@@ -161,6 +161,9 @@
                 <li class="nav-item">
                     <a href="{% url 'creditcourse:maincreditfile' %}" class="nav-link"> Personal Credit
                         Course </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/{{ request.resolver_match.app_name }}/credit-affiliate" class="nav-link">Personal Credit Repair Done For You Services {{ verbose_portal_name }} </a>
                 </li>
                 <li class="nav-item">
                     <a href="/{{ request.resolver_match.app_name }}/customer-financing-offer" class="nav-link"> Offering Financing To Your
