--- a/getdinerotoday/templates/pages/base-creditcourse.html
+++ b/getdinerotoday/templates/pages/base-creditcourse.html
@@ -21,6 +21,9 @@
                     <a href="{% url 'creditcourse:maincreditfile' %}" class="nav-link"> Introduction Page </a>
                   </li>
                   <li class="nav-item">
+                    <a href="{% url 'creditcourse:creditrepairdoneforyou' %}" class="nav-link"> Done For You Credit Repair Services </a>
+                  </li>
+                  <li class="nav-item">
                      <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">How To Get A Good Mortgage Rate <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column " aria-expanded="false">
                         <li class="nav-item"><a href="{% url 'creditcourse:mortgageone' %}" class="nav-link">8 effective credit tips for getting mortgage ready in 2020</a></li>
